--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,86 @@
+body {
+}
+h1 {
+  color: black;
+  margin: 20px auto;
+  width: 410px;
+}
+.content {
+  margin: 0 auto;
+  width: 400px;
+  background-color: rgb(250, 250, 250);
+  border-radius: 20px;
+  padding: 2px 4px;
+  box-shadow: 0px 0px 2px gray;
+}
 .upperCase {
   display: flex;
+  margin-left: 12px;
 }
 .lowerCase {
+  margin-left: 12px;
   display: flex;
 }
 .number {
+  margin-left: 12px;
   display: flex;
 }
 .specialChar {
+  margin-left: 12px;
   display: flex;
+}
+.passwordNumber {
+  display: inline-flex;
+  margin: 0 auto;
+  width: 180px;
+  height: 40px;
+  border-radius: 20px;
+  color: aliceblue;
+  font-size: large;
+  padding: 0px 20px;
+  background-color: blueviolet;
+  border: none;
+  margin-left: 3px;
+}
+::placeholder {
+  color: azure;
+  opacity: 80%;
+  font-size: small;
+}
+.generate {
+  display: inline-flex;
+  margin: 5px auto;
+  margin-left: 3px;
+  width: 170px;
+  height: 40px;
+  border-radius: 20px;
+  color: aliceblue;
+  font-size: small;
+  padding: 13px 20px;
+  background-color: blueviolet;
+  border: none;
+}
+.generate:active {
+  opacity: 80%;
+  /* box-shadow: 1px 1px 10px black; */
+}
+.password {
+  border: 1px solid black;
+  background-color: white;
+  display: block;
+  margin: 10px auto;
+  width: 180px;
+  height: 40px;
+  border-radius: 20px;
+  color: black;
+  font-size: large;
+  padding: 0px 20px;
+}
+h4 {
+  margin: 0 auto;
+  margin-top: 30px;
+  width: 140px;
+  text-align: center;
+  color: black;
+  font-size: large;
 }
