--- a/css/style.css
+++ b/css/style.css
@@ -1,110 +1,152 @@
 body {
+  background-color: rgb(250, 250, 250);
 }
 h1 {
   color: black;
   margin: 20px auto;
   width: 410px;
 }
-.content {
-  margin: 0 auto;
-  width: 400px;
-  background-color: rgb(250, 250, 250);
-  border-radius: 20px;
-  padding: 2px 4px;
-  box-shadow: 0px 0px 2px gray;
-}
-.upperCase {
-  display: flex;
-  margin-left: 12px;
-}
-.upperCase:hover {
-  font-weight: bold;
-}
-.upperCase:active {
-  opacity: 50%;
-}
-.lowerCase {
-  margin-left: 12px;
-  display: flex;
-}
-.lowerCase:hover {
-  font-weight: bold;
-}
-.lowerCase:active {
-  opacity: 50%;
-}
-.number {
-  margin-left: 12px;
-  display: flex;
-}
-.number:hover {
-  font-weight: bold;
-}
-.number:active {
-  opacity: 50%;
-}
-.specialChar {
-  margin-left: 12px;
-  display: flex;
-}
-.specialChar:hover {
-  font-weight: bold;
-}
-.specialChar:active {
-  opacity: 50%;
-}
-.passwordNumber {
-  display: inline-flex;
-  margin: 0 auto;
-  width: 180px;
-  height: 40px;
-  border-radius: 20px;
-  color: aliceblue;
-  font-size: large;
-  padding: 0px 20px;
-  background-color: blueviolet;
-  border: none;
-  margin-left: 3px;
-}
-::placeholder {
-  color: azure;
-  opacity: 80%;
-  font-size: small;
-}
-.generate {
-  display: inline-flex;
-  margin: 5px auto;
-  margin-left: 3px;
-  width: 170px;
-  height: 40px;
-  border-radius: 20px;
-  color: aliceblue;
-  font-size: small;
-  padding: 13px 20px;
-  background-color: blueviolet;
-  border: none;
-}
-.generate:active {
-  opacity: 80%;
-  /* box-shadow: 1px 1px 10px black; */
-}
-.password {
-  border: 1px solid black;
-  background-color: white;
-  display: block;
-  margin: 10px auto;
-  width: 180px;
-  height: 40px;
-  border-radius: 20px;
-  color: black;
-  font-size: large;
-  padding: 0px 20px;
+h3 {
+  font-family: "Source Sans 3", sans-serif;
+  font-size: 28px;
+  line-height: 32px;
+  font-weight: 500;
+  margin-bottom: 8px;
+  letter-spacing: -0.56px;
+  border-bottom: 2px solid rgb(205 198 198);
 }
 h4 {
+  font-family: "Source Sans 3", sans-serif;
   margin: 0 auto;
   margin-top: 30px;
   width: 140px;
-  text-align: center;
+  text-align: justify;
+  color: rgb(27, 27, 27);
+  font-size: medium;
+}
+.content {
+  display: flex;
+  margin: 15px auto;
+  width: 35%;
+  background-color: rgb(255, 255, 255);
+  border-radius: 20px;
+  padding: 2px 40px;
+
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+
+  .length {
+    display: inline-block;
+    margin: 40px auto;
+    padding: 18px;
+    border-left: 2px solid rgb(205 198 198);
+    .passwordNumber {
+      display: inline-block;
+      margin: 20px auto;
+      width: 140px;
+      height: 40px;
+      border-radius: 20px;
+      color: aliceblue;
+      font-size: large;
+      padding: 0px 20px;
+      background-color: blueviolet;
+      border: none;
+      margin-left: 3px;
+    }
+    ::placeholder {
+      color: azure;
+      opacity: 80%;
+      font-size: small;
+    }
+  }
+  .options {
+    display: inline-block;
+
+    #checkbox {
+      display: inline-block;
+    }
+    p {
+      display: inline-block;
+    }
+    .upperCase {
+      display: inline-flex;
+      margin-left: 12px;
+    }
+    .upperCase:hover {
+      font-weight: bold;
+    }
+    .upperCase:active {
+      opacity: 50%;
+    }
+    .lowerCase {
+      margin-left: 12px;
+      display: flex;
+    }
+    .lowerCase:hover {
+      font-weight: bold;
+    }
+    .lowerCase:active {
+      opacity: 50%;
+    }
+    .number {
+      margin-left: 12px;
+      display: flex;
+    }
+    .number:hover {
+      font-weight: bold;
+    }
+    .number:active {
+      opacity: 50%;
+    }
+    .specialChar {
+      margin-left: 12px;
+      display: flex;
+    }
+    .specialChar:hover {
+      font-weight: bold;
+    }
+    .specialChar:active {
+      opacity: 50%;
+    }
+  }
+}
+.passwordHolder {
+  border: none;
+  border-bottom: 2px solid black;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  margin: 10px auto;
+  width: 40%;
+  height: 80px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
   color: black;
-  font-size: large;
+
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+
+  .password {
+    border: none;
+    background-color: transparent;
+    margin: 20px;
+    width: 80%;
+    font-size: large;
+  }
+  .generate {
+    display: flex;
+    background-color: transparent;
+    border: none;
+    justify-content: end;
+    margin: 28px;
+    .img {
+      height: 20px;
+      width: 20px;
+    }
+    img:active {
+      opacity: 80%;
+    }
+  }
+  .generate:active {
+    opacity: 80%;
+    /* box-shadow: 1px 1px 10px black; */
+  }
 }
